--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "token": "nice try",
-    "clientId": "1069690760712171571"
+    "clientId": "1069690760712171571",
+    "guildId": "552886687118655489"
 }
